# SharktankLang

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  contributing.md  language.md
examples/: pitch.stl
src/sharktanklang.egg-info/: PKG-INFO
web/backend/: main.py  requirements.txt
web/frontend/: app.js  index.html  style.css
