[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sharktanklang"
version = "0.1.0"
description = "Shark Tank India themed programming language"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sharktanklang = "sharktanklang.cli:main"
